# esplink

./: .clang-tidy  .cmake_format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: Conan.cmake  StaticAnalyzers.cmake
include/: esp_boot_cmd.hpp  esp_chip.hpp  esp_serial_port.hpp  esp_slip.hpp  esp_utility.hpp
include/esp_common/: chip.hpp  constants.hpp  utility.hpp
include/esp_flash/: boot_cmd.hpp  chip.hpp  serial_port.hpp  slip.hpp
include/esp_mkbin/: app_format.hpp  elf_reader.hpp
include/esp_serial/: boot_cmd.hpp  serial_port.hpp  slip.hpp
src/: CMakeLists.txt  esp_flash.cpp  esp_mkbin.cpp  esputil.cpp
test/: CMakeLists.txt  run_mkbin.cmake  run_mkbin.py  test_elf_parse.cpp  test_flash.cpp  test_mkbin.cpp
test/elf/: main.elf  run_flags.json
